--- a/src/app/components/notas/notas.component.html
+++ b/src/app/components/notas/notas.component.html
@@ -47,7 +47,7 @@
                         <a class="pointer text-sky-700" matTooltip="Ver Registro" (click)="vetNota(element)">
                             <mat-icon>visibility</mat-icon>
                         </a>
-                        <a class="pointer text-red-500" matTooltip="Eliminar Registro" (click)="deleteNota(element._id)">
+                        <a class="pointer text-red-500" matTooltip="Eliminar Registro" (click)="deleteNota(element.id)">
                             <mat-icon>delete</mat-icon>
                         </a>
                     </td>
